# courses-data

./: Cargo.toml  build_script.sh  index.ts
docs/installation-example/: README.md
docs/writeup/: main.typ
examples/: cli.rs
indexeddb-website/: index.html  index.js  indexeddb_tutorial.js
src/: lib.rs  main.rs
